More works about Sprott A.

--- a/p5/spr_a_testsys.tex
+++ b/p5/spr_a_testsys.tex
@@ -42,54 +42,83 @@
 
 В таком виде система, при изменении $c_{x_y} $
 в достаточно широком диапазоне может демонстрировать как
-сложно-периодическое, так и преимущественно, хаотическое
-поведение (рис.~\ref{atu:f:spr_a_phase}). При этом, в диапазоне $c_{x_y} \in [0.1 ; 0.7] $
-наблюдаются перестройки структуры аттрактора, а при относительно больших
-значениях данного параметра аттрактор представляет собой полый тор.
-
+сложно-периодическое (рис.~\ref{atu:f:spr_a_p_0372}), так и преимущественно, хаотическое
+поведение (рис.~\ref{atu:f:spr_a_p_0610}). 
 
 \begin{figure}[htb!]
 \centerline{
-  \includegraphics[width=0.33\textwidth]{p/cha/spr_a/sprott_a-p_xyz_cx_y=0x372.png}
-  \includegraphics[width=0.33\textwidth]{p/cha/spr_a/sprott_a-p_xyz_cx_y=0x610.png}
-  \includegraphics[width=0.33\textwidth]{p/cha/spr_a/sprott_a-p_xyz_cx_y=1x000.png}
+  \includegraphics[width=0.49\textwidth]{p/cha/spr_a/sprott_a-p_xyz_cx_y=0x372.png}
+  \includegraphics[width=0.49\textwidth]{p/cha/spr_a/sprott_a_f-p_f_cx_y=0x372.png}
 }
-\caption{Аттракторы системы (\ref{atu:eq:spr_a})
-  при $ c_{x_y} =0.372 $, $ c_{x_y} =0.61 $, $ c_{x_y} =1.00 $
+\caption{Аттрактор и спектр системы (\ref{atu:eq:spr_a}) при $ c_{x_y} =0.372 $.
+  Сложно-периодический режим.
 }
-\label{atu:f:spr_a_phase}
+\label{atu:f:spr_a_p_0372}
 \end{figure}
 
+При этом, в диапазоне $c_{x_y} \in [0.1 ; 0.7] $
+наблюдаются перестройки структуры аттрактора, а при относительно больших
+значениях данного параметра аттрактор представляет собой полый тор.
+
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.49\textwidth]{p/cha/spr_a/sprott_a-p_xyz_cx_y=0x610.png}
+  \includegraphics[width=0.49\textwidth]{p/cha/spr_a/sprott_a_f-p_f_cx_y=0x610.png}
+}
+\caption{Аттрактор и спектр системы (\ref{atu:eq:spr_a}) при $ c_{x_y} =0.610 $.
+  Хаотический режим
+}
+\label{atu:f:spr_a_p_0610}
+\end{figure}
+
+
+
+
 Важной особенностью поведения этой системы является то, что при $ c_{x_y} \ge 1 $
-в спектре системы имеются очень ограниченные участки сплошного спектра~(рис.~\ref{atu:f:spr_a_f}).
+в спектре системы имеются очень ограниченные участки сплошного спектра~(рис.~\ref{atu:f:spr_a_p_1000}).
 При этом, как и для получения корректного спектра, так и для обнаружения ``разбегания'' траекторий
 необходимо моделирование системы на протяжении достаточно длительного
 (по сравнению с многими схожими системами) модельного времени.
 
 \begin{figure}[htb!]
 \centerline{
-  \includegraphics[width=0.33\textwidth]{p/cha/spr_a/sprott_a_f-p_f_cx_y=0x372.png}
-  \includegraphics[width=0.33\textwidth]{p/cha/spr_a/sprott_a_f-p_f_cx_y=0x610.png}
-  \includegraphics[width=0.33\textwidth]{p/cha/spr_a/sprott_a_f-p_f_cx_y=1x000.png}
+  \includegraphics[width=0.49\textwidth]{p/cha/spr_a/sprott_a-p_xyz_cx_y=1x000.png}
+  \includegraphics[width=0.49\textwidth]{p/cha/spr_a/sprott_a_f-p_f_cx_y=1x000.png}
 }
-\caption{Спектры системы (\ref{atu:eq:spr_a})
-  при $ c_{x_y} =0.372 $, $ c_{x_y} =0.61 $, $ c_{x_y} =1.00 $
+\caption{Аттрактор и спектр системы (\ref{atu:eq:spr_a}) при $ c_{x_y} =1.0 $.
 }
-\label{atu:f:spr_a_f}
+\label{atu:f:spr_a_p_1000}
 \end{figure}
+
 
 Рассмотрим зависимости $q_{*}(c_{x_y}) $ (рис.~\ref{atu:f:spr_a_q})
 для системы (\ref{atu:eq:spr_a}). Анализ этих зависимостей
-даёт однозначный ответ о возможном виде критерия -- $q_{x^2}$.
-Используя его, строим систему идентификации.
+даёт практически однозначный ответ о возможном виде критерия -- $q_{x^2}$.
+Второй кандидат -- $q_{x}$ обладает меньшей линейностью,
+значения критериев, в которые не входит $x$, практически не зависят от $c_{c_y}$,
+а вид критериев $q_{xy}$ и $q_{xz}$ ничем не лучше, чем у $q_{x}$.
+Таким образом, систему идентификации будем строить, используя критерий  $q_{x^2}$.
 
 \begin{figure}[htb!]
 \centerline{
-  \includegraphics[width=0.50\textwidth]{p/cha/spr_a/sprott_a_p-p_c_x_y.png}
+  \includegraphics[width=0.60\textwidth]{p/cha/spr_a/sprott_a_q-p_c_x_y.png}
 }
 \caption{Зависимости $q_{*}(c_{x_y})$ для системы (\ref{atu:eq:spr_a}) }
 \label{atu:f:spr_a_q}
 \end{figure}
+
+Нельзя не отметить, что в начальной области
+$q_{x^2}(c_{x_y}) $, а именно там, где происходят постоянные
+перестройки структуры аттрактора, ни один из рассматриваемых критериев
+не имеет достаточной монотонности, что не даёт возможности
+построить работоспособную систему идентификации.
+Для работы в этой области, скорее всего, требуется синтез специальных критериев.
+Также, в окрестности точки $c_{x_y}=1.775$ аттрактор также резко изменяет свою структуру.
+Так как это достаточно узкая окрестность,
+то можно предположить, что мультиагентная система идентификации
+не окажется неработоспособной в этой области, просто вырастет
+ошибка идентификации.
+
 
 
 Динамика процессов идентификации для системы Sprott A представлена на рис.~\ref{atu:f:spr_a_id}.
@@ -106,7 +135,7 @@
 \label{atu:f:spr_a_id}
 \end{figure}
 
-Зависимость среднеквадратических ошибок идентификации от величины $q_\gamma$ (рис.~\ref{atu:f:spr_a_e_qgamma})
+Зависимость $\overline{e}( q_\gamma )$ (рис.~\ref{atu:f:spr_a_e_qgamma})
 свидетельствует о довольно слабом влиянии этого параметра
 на динамику системы идентификации.
 Проявляются робастные свойства поисковых агентов.
@@ -124,7 +153,7 @@
 
 
 Зависимости $\overline{e_*}(a_q)$ (рис.~\ref{atu:f:spr_a_e_a_q})
-с одной стороны, позволяют корректно определить время усреденения,
+с одной стороны, позволяют корректно определить время усреднения,
 с другой -- подтверждают тезис о том, что более ярко выраженное изменение
 параметра требует большего времени наблюдения за системой
 для проведения идентификации.
@@ -142,6 +171,6 @@
 
 Таким образом, для хаотической системы ``Sprott A''
 удалось создать и критерий идентификации и работоспособную систему идентификации
-на основании энергетического критерия вида (\ref{atu:eq:qlin}).
+на основании энергетического критерия вида $q_{x^2}$.
 
 
