More/update pics for Sprott A.

--- a/p5/lor_testsys.tex
+++ b/p5/lor_testsys.tex
@@ -270,7 +270,7 @@ FAlv5.3z.$q_{x^2}$. Символ ``A'' на второй позиции кажд
 одинаковыми для корректного сравнения различных походов.
 
 
-На рис.~\ref{atu:f:lor_id_qAuv5.3r.q_x2_sign} представлены результаты
+На рис.~\ref{atu:f:lor_id_qAuv5.3r.q_x2_sign} представлены результаты идентификации
 методом qAuv5.3r.$q_{x^2}$, при этом на левом графике представлена
 динамика перемещения каждой из подвижных моделей,
 а на правом -- 4 споcоба определения $p_{id}(t)$:
