Update picturef for Lorenz and Sprott

--- a/p5/lor_testsys.tex
+++ b/p5/lor_testsys.tex
@@ -741,7 +741,7 @@ $q_{z^2}(r,b)$.
 достаточно мала. Следовательно, при двупараметрической идентификации
 данный критерий имеет смысл  использовать для (оценочной)
 идентификации параметра $r$, и совокупность данного критерия
-с, например, $q_{x^2}$ позволит идентифицировать
+вместе с, например, $q_{x^2}$ позволит идентифицировать
 оба параметра без избыточного количества моделей.
 
 \begin{figure}[h!]
@@ -767,7 +767,7 @@ $q_{(x-y)^2}(r,b)$.
 
 На рис.~\ref{atu:f:lor_qx2_r_sigma} приведена зависимость
 $q_{x^2}(r,\sigma)$.
-Поведение єтого критерия на паре параметров $(r,\sigma)$
+Поведение этого критерия на паре параметров $(r,\sigma)$
 существенно отличается от его же поведения на паре $(r,b)$.
 За исключением узкого ``оврага'', зависимость от параметра $\sigma$
 пренебрежимо мала, что даёт основания для
