--- a/p5/spr_a_testsys.tex
+++ b/p5/spr_a_testsys.tex
@@ -156,8 +156,8 @@ $p_{ge}$, $p_{le}$, $p_{ee}$ и $p_{xe}$.
 худшие результаты поиска. При этом,
 остальные подходы к определению $p_{id}$
 демонстрируют схожие между собой результаты.
-$\overline{e}_{bm}=XXX$
-$\overline{e}_{ba}=XXX$
+$\overline{e}_{bm}=1.41$
+$\overline{e}_{ba}=1.49$.
 
 
 \begin{figure}[h!]
@@ -174,9 +174,9 @@ $\overline{e}_{ba}=XXX$
 но при условии плавного изменение значения $p_o(t)$. Также очевидно, что
 как абсолютные, так и относительные значения ошибок идентификации в данном случае заметно
 меньше, при сохранении общей картины.
-$\overline{e}_{bm}=XXX$
+$\overline{e}_{bm}=0.91$
 и
-$\overline{e}_{ba}=XXX$.
+$\overline{e}_{ba}=0.84$.
 
 \begin{figure}[h!]
   \centerline{
@@ -191,8 +191,7 @@ $\overline{e}_{ba}=XXX$.
 
 На рис.~\ref{atu:f:spr_a_id_FAlv5.3r.q_x2_sign} представлены результаты
 методом FAlv5.3r.$q_{x^2}$.
-$\overline{e}_{bm}=XXX$
-$\overline{e}_{ba}=XXX$
+$\overline{e}_{bm}=1.71$
 
 
 \begin{figure}[h!]
@@ -209,9 +208,7 @@ $\overline{e}_{ba}=XXX$
 но при условии плавного изменение значения параметра объекта. Очевидно, что
 как абсолютные, так и относительные значения ошибок идентификации в данном случае заметно
 меньше, при сохранении общей картины.
-$\overline{e}_{bm}=XXX$
-и
-$\overline{e}_{ba}=XXX$.
+$\overline{e}_{bm}=0.87$
 
 \begin{figure}[h!]
   \centerline{
