Added F_type for Lorenz.
And remove old picture about this.

--- a/atudiss.tex
+++ b/atudiss.tex
@@ -40,8 +40,8 @@
 
 %\newcommand{\LinkRef}[1]{ \textit{\color{red}#1} }
 \newcommand{\LinkRef}[1]{}
-% \newcommand{\Cmt}[1]{ {\small\color{red}#1} }
-\newcommand{\Cmt}[1]{}
+\newcommand{\Cmt}[1]{ {\small\color{red}#1} }
+%\newcommand{\Cmt}[1]{}
 
 \clubpenalty9990
 \widowpenalty9990%
