--- a/p2/p2.tex
+++ b/p2/p2.tex
@@ -7,25 +7,39 @@
 какой-либо меры $\mu(x_o(t),x_i(t))$ в пространстве выходных
 сигналов~[].
 
-\textit{TODO: обоснование и картинки}
+\Cmt{TODO: обоснование и картинки}
 
 Для целей идентификации необходимо существование
 заданного скалярного критерия $q(x(t))$, близость величин
 которых для объекта и модели (в смысле какой-либо меры)
 и позволяет говорить о достижении цели идентификации.
 
-
 Физическая измеримость.
-
-Отношение к интересующим аспектам динамики объекта.
-
-Монотонность -- как следствие одноэкстремальность?
 
 Следствием невозможности непосредственного использования выходных
 сигналов объекта и моделей в качестве критерия идентификации, а также
 требование физической измеримости критерия является
 тот факт, что для получения оценки критерия, как правило,
 требуется значительное время.
+
+Законы сохранения в физике.
+
+Представления величин, связанных с энергией.
+
+Voltage, elastic -- $x^2$.
+
+Potential in uniform field -- $x$ 
+
+Chemical kinetic -- $\max(x)$.
+
+Electro-magnetic -- $x\cdot y$.
+
+
+
+Отношение к интересующим аспектам динамики объекта.
+
+Монотонность -- как следствие одноэкстремальность?
+
 
 Зависимость (обозначение?) от времени оценивания.
 Методы измерения.
@@ -35,7 +49,9 @@
 
 
 
-\section{Отличие задачи идентификации от задач решения нелинейного у равнения и поиска экстремума}
+\section{Отличие задачи идентификации от задач решения нелинейного уравнения и поиска экстремума}
+
+\Cmt{Перенести куда-то}
 
 На первый взгляд, при заданном критерии идентификации, задача идентификации
 сводится к классической задаче решения нелинейного уравнения: надо найти такие значения
@@ -80,13 +96,15 @@ $q_m$ принимает значение, наиболее близкое к з
 более чувствителен к шумам измерения, чем собственно измерение.
 
 
-% TODO: Требование конечности производных в условиях дискретного представления сигнала.
+\Cmt{ TODO: Требование конечности производных в условиях дискретного представления сигнала.}
 
 Все эти явления делают задачу идентификации более сложной, чем
 исходные задачи, чем и обусловлено
 существование широкого спектра методов идентификации. Тем не менее,
 некоторые алгоритмы, применимые при поиска экстремума, могут быть
 полезны при синтезе системы идентификации.
+
+Свёртка с чем-то.
 
 Как уже было отмечено, для успешности процесса идентификации требуется
 построение различных интегральных критериев, зависящих,
@@ -106,8 +124,9 @@ $q_m$ принимает значение, наиболее близкое к з
 %
 %\noindent
 где $\tau_q$ -- характерное время оценивания, $x(t)$ -- выбранная переменная состояния системы.
-%Это далеко не единственный вид определения критерия, но в данной работе предлагается именно он,
-%и последующие критерием будут использовать (\ref{atu:eq:qlin}).
+
+Скользящее среднее:
+$q_{ma}$??
 
 Чернавскиий~\cite{chernavskii_syn_info}.
 
