Add e(N) for Lorenz

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -619,10 +619,11 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 Какие параметры системы идентификации можно адаптировать
 и на каком уровне.
 
-Когда имеет смысл играть с чувствительностью.
+\Cmt{Когда имеет смысл играть с чувствительностью.}
 
-% Как близко имеет смысл подводить модели к экстремуму?
+\Cmt{Как близко имеет смысл подводить модели к экстремуму?}
 
+% ----------------------------------------- ERR -------------------------
 \section{Качество идентификации}
 
 Среди множества способов оценивания качества идентификации
@@ -780,7 +781,7 @@ $R_{\infty}^n$ для дискретного представления:
 параметра как $p_{bm}(t)$ (``best model''),
 соответствующую ему усреднённую ошибку как $\overline{e}_{bm}$.
 При этом безразмерные величины обозначим как
-$\overline{e}_{bmge}$, $\overline{e}_{bmle}$,  \ldots.
+$\overline{e}_{gebm}$, $\overline{e}_{lebm}$,  \ldots.
 Близость этих величин к единице, при одновременной малости
 $\overline{e}_{r*}$, свидетельствует о том, что передвижения
 агентов практически бесполезны, и работоспособность системы идентификации достигается
