More words in p3, other small fixes.

--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -126,8 +126,8 @@ c) упрощённая форма варианта b) -- ограничение
 \end{equation}
 
 Целью задачи идентификации будем считать нахождение
-такого сигнала $p_m(t)$, для которого
-отличие $q_m(t)$ от $q_o(t)$ минимально.
+такого сигнала $p_{id}(t)$, для которого
+отличие $q_{id}(t)$ от $q_o(t)$ минимально.
 Понятие ``отличие'', как и вид критерия $q$, определяется исходной задачей.
 
 
