--- a/p5/spr_a_testsys.tex
+++ b/p5/spr_a_testsys.tex
@@ -270,7 +270,6 @@ $\overline{e}_{bm}=0.87$
   \label{atu:f:spr_a_id_FAlv5.3r.q_x2_sin}
 \end{figure}
 
-\Cmt{ $\sigma_q(a_q)$ .}
 
 
 \subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Sprott A}
@@ -348,8 +347,9 @@ $\overline{e}_{r*}(q_\gamma)$ при применении метода qAuv5.3r.
 $\overline{e}_{r*}(q_\gamma)$ при применении метода FAlv5.3r.$q_{x^2}$.
 Опять же, наблюдается полная аналогия. Отличие от системы Лоренса наблюдается только
 в левой части графика, где не наблюдается роста ошибок при
-малых значениях $q_\gamma$. Скорее всего, для данной системы
-рассматриваемый диапазон недостаточен для наблюдения этого эффекта. \Cmt{Check!}.
+малых значениях $q_\gamma$. Для данной системы
+рассматриваемый диапазон недостаточен для наблюдения этого эффекта,
+и рост ошибки идентификации наблюдается только при достаточно малых его значениях.
 
 \begin{figure}[h!]
   \centerline{
