Add 1-arent method for Lorens and e(omega_p)

--- a/p5/lor_testsys.tex
+++ b/p5/lor_testsys.tex
@@ -82,7 +82,7 @@ $b = 2.6666667$, $\sigma = 10$, если не будет явно указано
 
 
 Динамическая система Лоренца является одной из наиболее изученных
-хаотических систем~\cite{neimark_stoch_chaos_vibro}.
+хаотических систем~\cite{neimark_stoch_chaos_vibro}. % TODO: more
 При этом, существует множество физических систем, для
 описания которых применима модель Лоренца. Это дает определённые основания
 предполагать, что синтез критерия идентификации, основанного на физических
@@ -264,6 +264,95 @@ $ \frac{\sigma_q \tau_q}{q} \approx \mathrm{const}$.
 где:
 $p_0 = 37$, $U_p=12$, $\omega_p=0.09$.
 
+В качестве точки отсчёта рассмотрим применение уже рассмотренно в работе [atu-phd]
+метода с одним агентом, управляющим двумя моделями,
+и использующий два УГПК и интегратором для определения динамики агента.
+Для возможности применения данного метода к системе динамического хаоса
+как объект, ток и модели были дополнены блоками оценивания критерия $q_{x^2}$.
+Таким образом, согласно ведённой классификации,
+метод получает обозначение
+Fblvd1.2.$q_{x^2}$.
+
+Прежде всего, рассмотрим процессы идентификации параметра $r$
+системы Лоренца данным методом. Таписные результаты моделирования
+приведены на рис.~(\ref{atu:f:lor_id_Fblvd1}).
+
+\begin{figure}[h!]
+  \centerline{
+    \includegraphics[width=0.49\textwidth]{p/cha/lor/Fblvd1_2/Fblvd1_2-p_xz_1_wp009.png}
+    \hfill
+    \includegraphics[width=0.49\textwidth]{p/cha/lor/Fblvd1_2/Fblvd1_2-p_xz_0_wp009.png}
+  }
+  \caption{Процесс идентификации параметра ``$r$'' системы Лоренца методом Fblvd1.2.$q_{x^2}$ при условиях~(\ref{atu:eq:lor_po_t_sign}) и (\ref{atu:eq:lor_po_t_sin})}
+  \label{atu:f:lor_id_Fblvd1}
+\end{figure}
+
+Как видно из графиков процессов идентификации,
+при заданных условиях и
+при достаточно плавном изменении параметров
+(\ref{atu:eq:lor_po_t_sin}) процесс идентификации приводит
+к положительному результату. Если же значения параметра изменяются
+скачкообразно~(\ref{atu:eq:lor_po_t_sign}),
+то процесс поиска нарушается -- система просто не успевает
+отреагировать на такие изменения. Попытки уменьшить
+время реакции за счёт изменение соответствующих
+параметров ($a_q$, $k_\omega$, $k_i$) приводят к полному нарушению
+процесса поиска.
+
+Для проверки тезиса о том, что в данном случае играет роль
+именно динамика изменения $p_o(t)$, снизим частоту $\omega_p$ до $0.03$
+и проведём моделирование при тех же значениях
+всех остальных параметров. Результаты приведены на рис.~\ref{atu:f:lor_id_Fblvd1_003}.
+
+\begin{figure}[h!]
+  \centerline{
+    \includegraphics[width=0.49\textwidth]{p/cha/lor/Fblvd1_2/Fblvd1_2-p_xz_1_wp003.png}
+    \hfill
+    \includegraphics[width=0.49\textwidth]{p/cha/lor/Fblvd1_2/Fblvd1_2-p_xz_0_wp003.png}
+  }
+  \caption{Процесс идентификации параметра ``$r$'' системы Лоренца методом Fblvd1.2.$q_{x^2}$ при $\omega_p=0.03$}
+  \label{atu:f:lor_id_Fblvd1_003}
+\end{figure}
+
+Как и следовало ожидать, при меньшем значении $\omega_p$
+оба графика подтверждают работоспособность системы идентификации.
+
+Для оценивания границ применимости метода с одним агентом
+и двумя моделями построим зависимости
+$\overline{e}_{rge}(\omega_p)$~(рис.~\ref{atu:f:lor_Fblvd1_e_omega_p}).
+
+\begin{figure}[h!]
+  \centerline{
+    \includegraphics[width=0.49\textwidth]{p/cha/lor/Fblvd1_2/Fblvd1_2-p_omega_p_e_1_.png}
+    \hfill
+    \includegraphics[width=0.49\textwidth]{p/cha/lor/Fblvd1_2/Fblvd1_2-p_omega_p_e_0_.png}
+  }
+  \caption{Зависимости $\overline{e}_{rge}(\omega_p)$ при идентификации системы Лоренца методом Fblvd1.2.$q_{x^2}$}
+  \label{atu:f:lor_Fblvd1_e_omega_p}
+\end{figure}
+
+Совершенно очевидно, что рассматриваемая система идентификации
+имеет очень ограниченный диапазон применимости при условии~(\ref{atu:eq:lor_po_t_sign}).
+Условие~(\ref{atu:eq:lor_po_t_sin}) не налагает таких жёстких ограничений.
+Однако, рассмотрев эту же зависимость в другом масштабе~(рис.~\ref{atu:f:lor_Fblvd1_e_omega_p_wide}),
+мы увидим, что ограничение всё же присутствует.
+
+\begin{figure}[h!]
+  \centerline{
+    \includegraphics[width=0.49\textwidth]{p/cha/lor/Fblvd1_2/Fblvd1_2-p_omega_p_e_0_wide.png}
+  }
+  \caption{Зависимость $\overline{e}_{rge}(\omega_p)$ при идентификации системы Лоренца методом Fblvd1.2.$q_{x^2}$}
+  \label{atu:f:lor_Fblvd1_e_omega_p_wide}
+\end{figure}
+
+Так как основным недостатком рассмотренного метода является
+ограниченная реакция ка резкое изменение параметра,
+то имеет смысл выдвинуть предположение,
+что использование в системе идентификации нескольких агентов,
+распределённых на пространстве параметров, может
+скомпенсировать данный недостаток.
+
+
 Для сравнения были выбраны три группы мультимодельных методов идентификации:
 qAuv5.3r.$q_{x^2}$,
 qAuv5.3r.$q_{y^2}$ и
@@ -278,10 +367,12 @@ FAlv5.3z.$q_{x^2}$. Символ ``A'' на второй позиции кажд
 На рис.~\ref{atu:f:lor_id_qAuv5.3r.q_x2_sign} представлены результаты идентификации
 методом qAuv5.3r.$q_{x^2}$, при этом на левом графике представлена
 динамика перемещения каждой из подвижных моделей,
-а на правом -- 4 споcоба определения $p_{id}(t)$:
+а на правом -- 4 способа определения $p_{id}(t)$:
 $p_{ge}$, $p_{le}$, $p_{ee}$ и $p_{xe}$.
 В первую очередь, следует отметить общую работоспособность
 методов, и правильную динамику каждой из моделей.
+
+
 Сравнивая результаты различных способов определения
 $p_{id}$ как визуально, так и численно, можно сделать
 вывод, что худшие результаты демонстрирует $p_{ee}$.
@@ -369,6 +460,33 @@ $\overline{e}_{ba}=5.46$.
   \label{atu:f:lor_id_qAuv5.3r.q_y2_sin}
 \end{figure}
 
+Также важным результатом является тот факт, что, по сравнению с одноагентным методом,
+система идентификации не теряет работоспособности
+при резких изменениях параметра. Зависимости $\overline{e}_{rge}(\omega_p)$
+для данного семейства методов приведены на рис.~\ref{atu:f:lor_qAuv5.3r_e_omega_p}.
+
+
+\begin{figure}[h!]
+  \centerline{
+    \includegraphics[width=0.49\textwidth]{p/cha/lor/qAuv5.3r/lor_qAuv5_3r_qx2-p_omega_p_e_sign.png}
+    \hfill
+    \includegraphics[width=0.49\textwidth]{p/cha/lor/qAuv5.3r/lor_qAuv5_3r_qx2-p_omega_p_e_sin.png}
+  }
+  \caption{Зависимости $\overline{e}_{rge}(\omega_p)$ при идентификации системы Лоренца методом qAuv5.3r.$q_{x^2}$}
+  \label{atu:f:lor_qAuv5.3r_e_omega_p}
+\end{figure}
+
+Сравнивавшая получившиеся зависимости с аналогичными для одноагентого метода (рис.~\ref{atu:f:lor_Fblvd1_e_omega_p}),
+можно с уверенностью констатировать,
+что применение мультиагентного подхода здесь полностью оправданно.
+Во-первых, допустимый диапазон $\omega_p$ расширяется как минимум на порядок. % TODO: limit?
+С другой стороны, в этом случае нет принципиальной разницы между
+условиями~(\ref{atu:eq:lor_po_t_sign}) и (\ref{atu:eq:lor_po_t_sin}),
+что также является несомненным преимуществом.
+
+
+
+
 Сравнивая результаты, представленные на рис.~\ref{atu:f:lor_id_qAuv5.3r.q_x2_sign}--\ref{atu:f:lor_id_qAuv5.3r.q_y2_sin}
 можно сделать следующие выводы:
 
@@ -430,6 +548,29 @@ $\overline{e}_{ba}=5.46$.
   \caption{Процесс идентификации параметра ``$r$'' системы Лоренца методом FAlv5.3z.$q_{x^2}$ при условии~(\ref{atu:eq:lor_po_t_sin})}
   \label{atu:f:lor_id_FAlv5.3z.q_x2_sin}
 \end{figure}
+
+Также следует отметить, что данный метод, аналогично предыдущему,
+проявляет работоспособность при резких изменениях параметра.
+Построим зависимости
+$\overline{e}_{rge}(\omega_p)$ (рис.~\ref{atu:f:lor_FAlv5.3r_e_omega_p}).
+
+
+\begin{figure}[h!]
+  \centerline{
+    \includegraphics[width=0.49\textwidth]{p/cha/lor/FAlv5.3z/lor_FAlv5_3z_qx2-p_omega_p_e_sign.png}
+    \hfill
+    \includegraphics[width=0.49\textwidth]{p/cha/lor/FAlv5.3z/lor_FAlv5_3z_qx2-p_omega_p_e_sin.png}
+  }
+  \caption{Зависимости $\overline{e}_{rge}(\omega_p)$ при идентификации системы Лоренца методом Fblvd1.2.$q_{x^2}$}
+  \label{atu:f:lor_FAlv5.3r_e_omega_p}
+\end{figure}
+
+Вид этих зависимостей аналогичен таковым для предыдущего метода,
+хотя рабочий диапазон по $\omega_p$ незначительно уже.
+Таким образом, применение мультимодельного подхода
+оправданно, по крайней мере с этой точки трения,
+вне зависимости от того, какую величину, $q$ или $F$
+используют агенты для определения $p_e$.
 
 % ----------------------------------------- id_params -------------------------------
 
