--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -28,10 +28,58 @@
 характерное время реакции системы $\tau_p$ на изменение
 параметра с учётом динамики измерения \(q\).
 
-\Cmt{функция качества -- определить здесь?}
 
-Важным элементом многих систем идентификации является функция качества идентфикации
+Критерий, основанных на физических принципах -- чаще всего размерная
+величина. Даже в тех случаях, когда конкретный вид критерия определён эмпирически
+или подбором, критерий чаще всего является размерной величиной.
+Как следствие, непосредственное использование величины критерия
+достаточно неудобно. Например, при смене единиц измерения,
+изменении общего масштаба объекта, значения такого критерия также будут
+изменятся, что достаточно неудобно при синтезе системы идентификации.
+
+Есть, как минимум, два подхода к решению данной проблемы.
+Первый достаточно очевиден -- все критерии обезразмериваются путём деления
+на какую-либо характерную величину. В качестве такой величины
+можно взять максимальное значение критерия при текущих ограничениях,
+значение критерия для ``центральной'' точки множества $\mathcal{P}$,
+а также подходящую по смыслу и размерности величину, полученную
+из анализа физических размерностей.
+
+Второй подход используется при создании экстремальных систем управления
+-- введении чётной ``функции качества''.
+При использовании введённых обозначений для задачи идентификации
+определим её следующим образом:
 $F(q_o, q_m)$.
+На эту функцию налагаются следующие требования:
+
+\begin{itemize}
+
+  \item
+    Инвариантность к смещению:
+    $F(a+c,b+c) = F(a,b)$.
+
+  \item
+    Симметричность: $ F(a,b) = F(b,a)$.
+
+  \item
+    Существование единственного экстремума с определенным значением:
+    $F(a,b) = 1  \Leftrightarrow a = b $.
+
+  \item
+    Монотонность на каждой из ветвей:
+    если $ a_2-b_2 > a_1-b_1, \; a_i-b_i > 0$, то $F(a_1,b_1) > F(a_2,b_2)$
+
+  \item
+    Неразрывность -- используется классическое определение из математического анализа
+
+\end{itemize}
+
+Эти требования при применении на практике часто дополняются
+требованием к простоте реализации функции качества,
+или даже к возможности её схемотехнической реализации
+без применения элементов вычислительной техники.
+
+
 
 С учётом обозначения
 %
@@ -133,7 +181,7 @@ $F(q_o, q_m)$.
 $F_i(t)$ -- текущее значение функции качества
 (если используется одна  модель для агента, или же если агент каким-либо образом её усредняет
 или аппроксимирует в случае нескольких моделей),
-$q_i(t)$ -- значение критерия качества (аналогично предыдущей величине в случен нескольких моделей),
+$q_i(t)$ -- значение критерия качества (аналогично предыдущей величине в случае нескольких моделей),
 $p_e(t)$ -- оценка идентифицируемого параметра текущим агентом.
 
 
