--- a/p5/lor_testsys.tex
+++ b/p5/lor_testsys.tex
@@ -264,17 +264,17 @@ $ \frac{\sigma_q \tau_q}{q} \approx \mathrm{const}$.
 где:
 $p_0 = 37$, $U_p=12$, $\omega_p=0.09$.
 
-В качестве точки отсчёта рассмотрим применение уже рассмотренно в работе [atu-phd]
+В качестве точки отсчёта рассмотрим применение уже рассмотрено в работе [atu-phd]
 метода с одним агентом, управляющим двумя моделями,
 и использующий два УГПК и интегратором для определения динамики агента.
 Для возможности применения данного метода к системе динамического хаоса
-как объект, ток и модели были дополнены блоками оценивания критерия $q_{x^2}$.
+как объект, так и модели были дополнены блоками оценивания критерия $q_{x^2}$.
 Таким образом, согласно ведённой классификации,
 метод получает обозначение
 Fblvd1.2.$q_{x^2}$.
 
 Прежде всего, рассмотрим процессы идентификации параметра $r$
-системы Лоренца данным методом. Таписные результаты моделирования
+системы Лоренца данным методом. Типичные результаты моделирования
 приведены на рис.~(\ref{atu:f:lor_id_Fblvd1}).
 
 \begin{figure}[h!]
@@ -295,9 +295,12 @@ Fblvd1.2.$q_{x^2}$.
 скачкообразно~(\ref{atu:eq:lor_po_t_sign}),
 то процесс поиска нарушается -- система просто не успевает
 отреагировать на такие изменения. Попытки уменьшить
-время реакции за счёт изменение соответствующих
+время реакции за счёт изменения соответствующих
 параметров ($a_q$, $k_\omega$, $k_i$) приводят к полному нарушению
-процесса поиска.
+процесса поиска. С другой стороны, уменьшение чувствительности
+(увеличение $q_\gamma$) даёт возможность восстановить
+работоспособность процесса идентификации ценой
+значительного увеличения ошибки.
 
 Для проверки тезиса о том, что в данном случае играет роль
 именно динамика изменения $p_o(t)$, снизим частоту $\omega_p$ до $0.03$
