Add pictured 'diregenging traj' to p2.

--- a/p2/p2.tex
+++ b/p2/p2.tex
@@ -9,6 +9,36 @@
 
 \Cmt{TODO: обоснование и картинки}
 
+На рис.~\ref{atu:f:lor_diff_x0} приведён пример, показвающий
+различие траекторий для системы Лоренца \Cmt{ref}
+при малом возмущении значений начальных условий.
+
+\begin{figure}[h!]
+  \centerline{
+    \includegraphics[width=0.49\textwidth]{p/lor_diff-p_xx_x0.png}
+    \hfill
+    \includegraphics[width=0.49\textwidth]{p/lor_diff-p_dx_x0.png}
+  }
+  \caption{Различине в поведение системы Лоренца при малом возмущении начальных условий}
+  \label{atu:f:lor_diff_x0}
+\end{figure}
+
+
+На рис.~\ref{atu:f:lor_diff_sigma} приведён пример, показвающий
+различие траекторий для системы Лоренца
+при малом возмущении значений параметра $\sigma$.
+
+\begin{figure}[h!]
+  \centerline{
+    \includegraphics[width=0.49\textwidth]{p/lor_diff-p_xx_sigma.png}
+    \hfill
+    \includegraphics[width=0.49\textwidth]{p/lor_diff-p_dx_sigma.png}
+  }
+  \caption{Различине в поведение системы Лоренца при малом возмущении параметра $\sigma$}
+  \label{atu:f:lor_diff_sigma}
+\end{figure}
+
+
 Для целей идентификации необходимо существование
 заданного скалярного критерия $q(x(t))$, близость величин
 которых для объекта и модели (в смысле какой-либо меры)
